# explainx

./: .gitignore  .travis.yml  README.md  __init__.py  calculate_shap.py  compile code.ipynb  data_for_shap_graphs.py  draw_dataframe.py  explain.py  feature_importance.py  hotjar.js  imports.py  main.py  plotly_graphs.py  protodash.py  pyproject.toml  pytest.py  requirements.txt  rescale_numeric_feature.py  run_only_first_time.py
.github/: FUNDING.yml
aix360/data/heloc_data/: heloc_dataset.csv
datasets/: heloc_dataset.csv
docs/: generate_examples.py
examples/: 01_sklearn.py  02_xgboost.py  03_lightgbm.py  04_catboost.py  05_keras_tensorflow.py  06_pytorch.py  07_statsmodels.py  08_custom_predict_fn.py  README.md  _common.py
explainx/: __init__.py  adapters.py  anchors.py  cli.py  conformal.py  dashboard.py  diagnostics.py  drift.py  explainer.py  io.py  local.py  mcp_server.py  narrate.py  prototypes.py  quality.py  report_html.py  schema.py  summary.py  utils.py
explainx/examples/: demo.py
explainx/tests/: test_adapters.py  test_dashboard.py  test_diagnostics.py  test_explainer.py  test_mcp_server.py
explainx_llm/: __init__.py  ale.py  cli.py  counterfactual.py  explainer.py  fairness.py  importance.py  interactions.py  lime_explain.py  mcp_server.py  metrics.py  mitigation.py  narrate.py  pdp.py  schema.py  shap_explain.py  summary.py  surrogate.py
explainx_llm/examples/: demo.py
explainx_llm/tests/: test_explainer.py  test_mcp_server.py
lib/: PDASH.py  analytics.py  app.py  calculate_metrics.py  calculate_shap.py  cohort_analysis.py  config_det.py  dashboard.py  data_for_shap_graphs.py  draw_dataframe.py  encode_decode_cat_col.py  explain.py  feature_impact.py  feature_impact_classification.py  feature_importance.py  feature_importance_classification.py  imports.py  insight_classification.py  insight_regression.py  insights.py  performance_metrics.py  plotly_css.py  plotly_graphs.py  protodash.py  rescale_numeric_feature.py  shap_pdp.py  summary_plot.py  utils.py  what_if.py
lib/apps/: cohort.py  distribution.py  feature_interaction.py  german_train.csv  global_explanation.py  local_explanation.py
lib/assets/: custom-script.js  topography.css
lib/frameworks/: shapley_values.py
lib/models/: modelprocessor.py  transformer_default.py
lib/shap/: _cext.cp37-win_amd64.pyd
tabs/: feature_interaction.py  global_explanation.py
tutorials/: 1. Xgboost Model on Boston Dataset.ipynb  10.  Gradient Boosting Regressor on Boston Dataset.ipynb  2. Xgboost Model on Heloc Dataset.ipynb  3. Catboost Model on Boston Dataset.ipynb  5 Support Vector Classifier on iris Dataset.ipynb  6. KNeighborsClassifier on iris Dataset.ipynb  7. Logistic Regression on iris dataset.ipynb  9.  Neural Network Classifier on iris Dataset.ipynb  tutorials.txt
(+22 files in other folders)
